--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,5 @@
 
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-       <span> <a routerLink="/">Posts</a></span>
-       <span class="spacer"></span>
-       <ul>
-        <li>
-            <a mat-button routerLink="create-post" routerLinkActive="mat-accent">Create Post</a>
-        </li>
-       </ul>
-    </mat-toolbar-row>
-</mat-toolbar>
+<app-header></app-header>
 <main>
    
     <router-outlet></router-outlet>
