--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,4 @@
+<h2>Login</h2>
 <mat-card>
     <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
         <mat-form-field>
@@ -8,7 +9,7 @@
         <mat-form-field>
             <mat-label> Password </mat-label>
             <input matInput placeholder="Password" type="password" name="password" ngModel #password="ngModel" required>
-            <mat-error *ngIf="password.invalid">Password is requiered</mat-error>
+            <mat-error *ngIf="password.invalid">Password is required</mat-error>
         </mat-form-field>
         <button mat-raised-button color="primary">Login</button>
     </form>
