--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -7,8 +7,13 @@
                 <mat-panel-title>        {{post.title}}
                 </mat-panel-title>    
             </mat-expansion-panel-header>
-           <p>{{post.description}}</p> 
-           <mat-action-row>
+            <div class="post-body">
+                <img src={{post.imagePath}} alt="post.title" srcset="">
+                <p>{{post.description}}</p> 
+            </div>
+            
+
+           <mat-action-row *ngIf="loginStatus && post.creator === userId ">
             <button mat-button color="primary" [routerLink]="['/edit',post.id]">EDIT</button>
             <button mat-button color="warn" (click)="onDelete(post.id)">Delete</button>
            </mat-action-row>
