--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,6 @@
 <h2>Login</h2>
+<mat-progress-bar *ngIf="isLoading" mode="indeterminate"></mat-progress-bar>
+
 <mat-card>
     <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
         <mat-form-field>
@@ -11,6 +13,6 @@
             <input matInput placeholder="Password" type="password" name="password" ngModel #password="ngModel" required>
             <mat-error *ngIf="password.invalid">Password is required</mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary">Login</button>
+        <button mat-raised-button color="primary" >Login</button>
     </form>
 </mat-card> 
